--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>CARD VALIDATOR</h1>
+        <h1 class="header-title">CARD VALIDATOR</h1>
         <button class="btn-dark"><span class="icon-moon"></span></button>  
     </header>
     <main class="main">
