--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     </header>
     <main class="main">
         <section class="card">
-            <h2 class="name-bank">NAME BANK</h2>
+            <h2 class="name-bank" id="name-bank">NAME BANK</h2>
             <div class="content-chip-debit">
                 <img src="img/chip-tarjeta.png" alt="">
                 <p>DEBITO/CREDITO</p>
             </div>
             <div class="number-card">
-                <pre>XXXX  XXXX  XXXX  XXXX</pre>
+                <pre id="number-card-print">XXXX  XXXX  XXXX  XXXX</pre>
             </div>
             <div class="information-card">                
                 <p>VALID <br>THRUS </p>
-                <p>12/2022</p>
+                <p id="month-year">12/2022</p>
             </div>
             <div class="footer-card">
-                <p>NOMBRE Y APELLIDO</p>
+                <p id="name-user">NOMBRE Y APELLIDO</p>
                 <img src="img/logo-visa.png" alt="">
             </div>
         </section>
